tests/ui/fail/js_concat.stderr
error: Potentially invalid expansion. Expected an identifier.
 --> tests/ui/fail/js_concat.rs:5:16
  |
5 |         $left ++ $right
  |                ^
